[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["wang542413041 <wang542413041@gmail.com>"]
description = "A cross platform with wasm-pack"
licence = "MIT/Apache-2.0"
repository= "https://github.com/wang542413041/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
